# my_interpret

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.json  code.pi  eval.cpp  eval_repl.cpp  main.cpp  test.cpp  token.json
ast/: assign.h  block.h  bool.h  break.h  call.h  compound.h  continue.h  expression_statement.h  float.h  for.h  foreach.h  function.h  hash.h  header.h  identifier.h  if.h  in.h  index.h  infix.h  integer.h  list.h  method.h  node.cpp  node.h  null.h  postfix.h  prefix.h  program.h  property.h  return.h  string.h  switch.h  ternary.h  while.h
evaluator/: assign.cpp  block.cpp  bool.cpp  break.cpp  call.cpp  compound.cpp  continue.cpp  environment.h  evaluator.cpp  evaluator.h  float.cpp  for.cpp  foreach.cpp  function.cpp  hash.cpp  identifier.cpp  if.cpp  in.cpp  index.cpp  infix.cpp  integer.cpp  list.cpp  method.cpp  null.cpp  postfix.cpp  prefix.cpp  program.cpp  property.cpp  return.cpp  string.cpp  switch.cpp  ternary.cpp  while.cpp
example/: closure.pi  deep copy.pi  dict.pi  for.pi  foreach.pi  function call.pi  function.pi  function_defaultParams.pi  higher-order function.pi  if.pi  list.pi  operation.pi  recursive.pi  switch.pi  while.pi
json/: json.cpp  json.h  parser.cpp  parser.h
lexer/: lexer.cpp  lexer.h
object/: bool.h  break.h  builtin.cpp  builtin.h  continue.h  copyable.h  error.h  float.h  function.h  hash.cpp  hash.h  hashable.h  header.h  integer.h  iterable.h  list.cpp  list.h  null.h  object.cpp  object.h  return.h  string.cpp  string.h
parser/: assign.cpp  block.cpp  bool.cpp  break.cpp  call.cpp  dot.cpp  (+28 more)
(+2 files in other folders)
